@@ -263,17 +263,47 @@ processRdChunk <- function(code, stage, options, env, Rdfile)
 	    res <- as.character(err)   # The last value of the chunk
 	    tmpcon <- file()
 	    writeLines(res, tmpcon, useBytes = TRUE)
-	    res <- parse_Rd(tmpcon, fragment=TRUE)
+	    res <- suppressWarnings(try(parse_Rd(tmpcon, fragment=FALSE), silent=TRUE))
+	    if (inherits(res, "try-error")) {
+	    	seek(tmpcon, 0)
+	    	res <- parse_Rd(tmpcon, fragment=TRUE)
+	    }
+	    close(tmpcon)
 	    # Now remove that extra newline added by the writeLines
 	    last <- res[[length(res)]]
 	    if (attr(last, "Rd_tag") == "TEXT" && (len <- length(last)))
 	        res[[length(res)]][len] <- gsub("\\n$", "", last[len])
 	    flag <- getDynamicFlags(res)
-	    res <- tagged(res, "LIST")
-	    res <- setDynamicFlags(res, flag)
-	    close(tmpcon)
-	    res <- prepare_Rd(res, defines = .Platform$OS.type, options=options,
+	    # We may have multiple chunks now.  If they are in 
+	    # a section, we can wrap them in LIST, but at top
+	    # level we can't, so we disallow multiple sections.
+	    
+	    # First clear out the junk.
+	    tags <- RdTags(res)
+	    keep <- rep(TRUE, length(tags))
+	    for (i in seq_along(tags)) {
+	        if (tags[i] == "TEXT" && res[[i]] == "")
+	            keep[i] <- FALSE
+	    }
+	    res <- res[keep]
+	    tags <- tags[keep]
+	    if (length(res) > 1) {
+	    	is_section <- !is.na(sectionOrder[tags])
+	    	if (!any(is_section)) 
+	    	    res <- tagged(res, "LIST")
+	    	else {
+	    	    if (sum(is_section) > 1) 
+	    		stop("Only one Rd section per \\Sexpr is supported.")
+	    	    res <- res[[which(is_section)]]
+	    	}
+	    } else if (length(res) == 1) res <- res[[1]]
+	    else res <- tagged("", "TEXT")
+	    
+	    if (is.list(res)) {
+	    	res <- setDynamicFlags(res, flag)
+	    	res <- prepare_Rd(res, defines = .Platform$OS.type, options=options,
 	                           stage2 = FALSE, stage3 = FALSE)
+	    }
 	} else if (options$results == "text")
 	    res <- tagged(err, "TEXT")
 	else if (length(res)) {
